[package]
name = "libstorage-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0"
libmdbx = "0"
anyhow = "1"
async-trait = "0"
log = "0"

[dependencies.tokio]
version = "1"
features = ["sync", "macros", "rt"]

[features]
rocksdb = []
mdbx = []
default = ["rocksdb", "mdbx"]